Intended v0.2.20
+ Add support for automatic less preprocessing of <link ref="stylesheet/less" ... /> elements
+ Add support for stylus
+ Automatically detect that less or stylus is required, and install them dynamically at runtime if needed
+ Handler event arguments are now cancelable
+ Allow for commas between XML attributes, e.g. <div foo="bar", cat="qwe"/>

v0.2.19
+ Disabled minification for now
+ Add -v/--version flags

v0.2.18
+ Allow for `foo is "image"` as a shorthand for `foo is = "image"`
+ Inline all stylesheets with static hrefs as a <style> tag in the header
+ Minify the CSS of inlined style tags using clean-css

v0.2.17
+ Variable declarations require a value (let foo is no longer valid, must to let foo = null)
+ implement json module
+ add an instagram example app
+ add access to npm node_modules with the require() statement in inline javascript code
+ implement xhr module

v0.2.16
+ Fix broken v0.2.15 build

v0.2.15
+ Use `let` instead of `var` for variable declarations
+ allow for comma-seperated declarations (e.g. let foo = 1, bar = 2)
+ new mutation statement syntax - instead of foo.bar.set(2), you say foo.bar set: 2

v0.2.14
+ inline statically referenced stylesheets
+ remove parentheseses around the conditinoal of if, for and switch statements.

v0.2.13
+ test new packaging system

v0.2.12
+ handler and function code now runs procedurally. Only template code is reactive and functional. However, functions are still truly functional (no side effects).
+ control flow statements parse and compile correctly in templates, handler and functions.
+ todomvc example app fully functional: http://marcuswest.in/fun/todo-mvc.html
+ lots and lots of other improvements :)

...

v0.2.7
+ Unit tests for parser, resolver, compiler and runtime library
+ Proper JS bridge: <script jsVar=funVar> ... jsVar.set(...) </script>
+ Mouse module